2013-06-11  KUBO Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: fix ruby version checking in binary gem.
	    Gem::ruby_version of ruby 2.0.0p195 is 2.0.0.195, which
	    doesn't match '= 2.0.0'.
	    (github issue #36 reported by sodonnel)

2013-03-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: fix potential SEGV when one connection
	    is used by more than two threads and temporary lobs are
	    freed by GC.

2013-03-16  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/stmt.c: call OCIStmtPrepare2()
	    without GVL to prevent OCI8#parse from blocking ruby itself
	    while the connection is used by another thread even though
	    non-blocking mode is set.

2013-03-09  KUBO Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: revert the previous commit because old
	    rubygems doesn't support:
	       required_ruby_version = ['>= 1.8.0', '<= 2.0.0']

2013-03-09  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.5 and 2.1.4
	* VERSION: change the version to 2.1.5.
	* docs/platform-specific-issues.md: remove obsolete description.
	* ext/oci8/extconf.rb, ext/oci8/oraconf.rb: fix to compile for
	    Windows x64 client.
	* ruby-oci8.gemspec: change required_ruby_version range
	    when a binary gem includes more than one compiled object.
	* test/test_connection_pool.rb: fix to pass tests on slow
	    machines.

2013-03-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, lib/oci8/oci8.rb, lib/oci8/oracle_version.rb:
	    refactoring.

2013-03-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, test/test_oci8.rb: set 'rubyoci8' as
	    the driver name, which is displayed in
	    V$SESSION_CONNECT_INFO.CLIENT_DRIVER.
	    (require Oracle 11g or upper)

2013-03-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: use RbConfig::CONFIG instead of obsolete
	    constant Config::CONFIG.
	* lib/oci8/object.rb, test/test_bind_time.rb, test/test_metadata.rb
	  test/test_object.rb, test/test_oci8.rb: