@@ -1,3 +1,8 @@
+2013-06-23  KUBO Takehiro  <kubo@jiubao.org>
+	* lib/oci8/metadata.rb: OCI8#describe_synonym and OCI8#describe_any
+	    accept 'PUBLIC.XXX' as a public synonym name.
+	* test/test_metadata.rb: add tests for OCI8#describe_synonym.
+
 2013-06-11  KUBO Takehiro  <kubo@jiubao.org>
 	* ruby-oci8.gemspec: fix ruby version checking in binary gem.
 	    Gem::ruby_version of ruby 2.0.0p195 is 2.0.0.195, which
